package eu.sulikdan.shoppingbackend.entity;

import jakarta.persistence.Entity;
import jakarta.persistence.Id;
import jakarta.persistence.Inheritance;
import jakarta.persistence.InheritanceType;
import jakarta.persistence.OneToOne;
import lombok.AllArgsConstructor;
import lombok.NoArgsConstructor;
import org.springframework.data.annotation.CreatedDate;
import org.springframework.data.annotation.LastModifiedDate;

import java.time.LocalDateTime;
import java.util.UUID;

/**
 * Is parent entity reused by all ProductItems to have relation as some sort of model - HP Probook 4530s,
 * but then there can be multiple of them ... so every Product has exact 1 Product Model ...
 * Product i
 */
@Entity
//TODO pick correct one
@Inheritance(strategy = InheritanceType.TABLE_PER_CLASS)
@NoArgsConstructor
@AllArgsConstructor
public abstract class ProductModel {

    @Id
    UUID id;

    String name;

    Double price;

    @OneToOne
    Product product;


    @CreatedDate
    LocalDateTime createdAt;
    @LastModifiedDate
    LocalDateTime modifiedAt;

}
